--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ trainer/multi_gpu_train_eval.py
 trainer/multi_gpu_train_eval.sh
 trainer/test_dataloader.py
 data_processing/test.py
+extract_lang_vec/
