--- a/requirement.yml
+++ b/requirement.yml
@@ -1,5 +1,7 @@
 name: ml
 channels:
+  - pytorch
+  - https://mirrors.ustc.edu.cn/anaconda/pkgs/free
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/simpleitk/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/menpo/
@@ -11,164 +13,160 @@ channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/r/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
-  - pytorch
-  - https://mirrors.ustc.edu.cn/anaconda/pkgs/free
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - absl-py=0.9.0=py37_0
-  - attrs=19.3.0=py_0
-  - autopep8=1.5.3=py_0
-  - backcall=0.1.0=py37_0
-  - blas=1.0=mkl
-  - bleach=3.1.4=py_0
-  - blinker=1.4=py37_0
-  - c-ares=1.15.0=h7b6447c_1001
-  - ca-certificates=2020.6.24=0
-  - cachetools=4.1.0=py_1
-  - certifi=2020.6.20=py37_0
-  - cffi=1.14.0=py37he30daa8_1
-  - chardet=3.0.4=py37_1003
-  - click=7.1.2=py_0
-  - cryptography=2.9.2=py37h1ba5d50_0
-  - cudatoolkit=10.1.243=h6bb024c_0
-  - cycler=0.10.0=py37_0
-  - dbus=1.13.14=hb2f20db_0
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py37_0
-  - expat=2.2.6=he6710b0_0
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - future=0.18.2=py37_1
-  - glib=2.63.1=h3eb4bd4_1
-  - gmp=6.1.0=0
-  - google-auth=1.14.1=py_0
-  - google-auth-oauthlib=0.4.1=py_2
-  - grpcio=1.27.2=py37hf8bcb03_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb31296c_0
-  - icu=58.2=he6710b0_3
-  - idna=2.9=py_1
-  - importlib-metadata=1.6.0=py37_0
-  - importlib_metadata=1.6.0=0
-  - intel-openmp=2020.1=217
-  - ipykernel=5.1.4=py37h39e3cac_0
-  - ipython=7.13.0=py37h5ca1d4c_0
-  - ipython_genutils=0.2.0=py37_0
-  - ipywidgets=7.5.1=py_0
-  - jedi=0.17.0=py37_0
-  - jinja2=2.11.2=py_0
-  - joblib=0.15.1=py_0
-  - jpeg=9b=0
-  - jsonschema=3.2.0=py37_0
-  - jupyter=1.0.0=py37_7
-  - jupyter_client=6.1.3=py_0
-  - jupyter_console=6.1.0=py_0
-  - jupyter_core=4.6.3=py37_0
-  - kiwisolver=1.2.0=py37hfd86e86_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.3=he6710b0_1
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.12.3=hd408876_0
-  - libsodium=1.0.16=h1bed415_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_1
-  - libuuid=1.0.3=0
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
-  - lz4-c=1.9.2=he6710b0_0
-  - markdown=3.1.1=py37_0
-  - markupsafe=1.1.1=py37h7b6447c_0
-  - matplotlib=3.1.3=py37_0
-  - matplotlib-base=3.1.3=py37hef1b27d_0
-  - mistune=0.8.4=py37h7b6447c_0
-  - mkl=2020.1=217
-  - mkl-service=2.3.0=py37he904b0f_0
-  - mkl_fft=1.0.15=py37ha843d7b_0
-  - mkl_random=1.1.1=py37h0573a6f_0
-  - nbconvert=5.6.1=py37_0
-  - nbformat=5.0.6=py_0
-  - ncurses=6.2=he6710b0_1
-  - ninja=1.7.2=0
-  - nltk=3.5=py_0
-  - notebook=6.0.3=py37_0
-  - numpy=1.18.1=py37h4f9e942_0
-  - numpy-base=1.18.1=py37hde5b4d6_1
-  - oauthlib=3.1.0=py_0
-  - olefile=0.46=py37_0
-  - openssl=1.1.1g=h7b6447c_0
-  - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py37_1
-  - parso=0.7.0=py_0
-  - pcre=8.43=he6710b0_0
-  - pexpect=4.8.0=py37_0
-  - pickleshare=0.7.5=py37_0
-  - pillow=7.1.2=py37hb39fc2d_0
-  - pip=20.0.2=py37_3
-  - prometheus_client=0.7.1=py_0
-  - prompt-toolkit=3.0.5=py_0
-  - prompt_toolkit=3.0.5=0
-  - protobuf=3.12.3=py37he6710b0_0
-  - ptyprocess=0.6.0=py37_0
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycodestyle=2.6.0=py_0
-  - pycparser=2.20=py_0
-  - pygments=2.6.1=py_0
-  - pyjwt=1.7.1=py37_0
-  - pyopenssl=19.1.0=py37_0
-  - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py37h05f1152_2
-  - pyrsistent=0.16.0=py37h7b6447c_0
-  - pysocks=1.7.1=py37_0
-  - python=3.7.7=hcff3b4d_5
-  - python-dateutil=2.8.1=py_0
-  - pytorch=1.5.1=py3.7_cuda10.1.243_cudnn7.6.3_0
-  - pyzmq=18.1.1=py37he6710b0_0
-  - qt=5.9.7=h5867ecd_1
-  - qtconsole=4.7.4=py_0
-  - qtpy=1.9.0=py_0
-  - readline=8.0=h7b6447c_0
-  - regex=2020.5.14=py37h7b6447c_0
-  - requests=2.23.0=py37_0
-  - requests-oauthlib=1.3.0=py_0
-  - rsa=4.0=py_0
-  - send2trash=1.5.0=py37_0
-  - setuptools=47.1.1=py37_0
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.15.0=py_0
-  - sqlite=3.31.1=h62c20be_1
-  - tensorboard=2.2.1=pyh532a8cf_0
-  - tensorboard-plugin-wit=1.6.0=py_0
-  - terminado=0.8.3=py37_0
-  - testpath=0.4.4=py_0
-  - tk=8.6.8=hbc83047_0
-  - toml=0.10.1=py_0
-  - torchvision=0.6.1=py37_cu101
-  - tornado=6.0.4=py37h7b6447c_1
-  - tqdm=4.46.1=py_0
-  - traitlets=4.3.3=py37_0
-  - urllib3=1.25.8=py37_0
-  - wcwidth=0.1.9=py_0
-  - webencodings=0.5.1=py37_1
-  - werkzeug=1.0.1=py_0
-  - wheel=0.34.2=py37_0
-  - widgetsnbextension=3.5.1=py37_0
-  - xz=5.2.5=h7b6447c_0
-  - zeromq=4.3.1=he6710b0_3
-  - zipp=3.1.0=py_0
-  - zlib=1.2.11=0
-  - zstd=1.4.4=h0b5b093_3
+  - _libgcc_mutex=0.1
+  - absl-py=0.9.0
+  - attrs=19.3.0
+  - autopep8=1.5.3
+  - backcall=0.1.0
+  - blas=1.0
+  - bleach=3.1.4
+  - blinker=1.4
+  - c-ares=1.15.0
+  - ca-certificates=2020.6.24
+  - cachetools=4.1.0
+  - certifi=2020.6.20
+  - cffi=1.14.0
+  - chardet=3.0.4
+  - click=7.1.2
+  - cryptography=2.9.2
+  - cudatoolkit=10.1.243
+  - cycler=0.10.0
+  - dbus=1.13.14
+  - decorator=4.4.2
+  - defusedxml=0.6.0
+  - entrypoints=0.3
+  - expat=2.2.6
+  - fontconfig=2.13.0
+  - freetype=2.9.1
+  - future=0.18.2
+  - glib=2.63.1
+  - gmp=6.1.0
+  - google-auth=1.14.1
+  - google-auth-oauthlib=0.4.1
+  - grpcio=1.27.2
+  - gst-plugins-base=1.14.0
+  - gstreamer=1.14.0
+  - icu=58.2
+  - idna=2.9
+  - importlib-metadata=1.6.0
+  - importlib_metadata=1.6.0
+  - intel-openmp=2020.1
+  - ipykernel=5.1.4
+  - ipython=7.13.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.5.1
+  - jedi=0.17.0
+  - jinja2=2.11.2
+  - joblib=0.15.1
+  - jpeg=9b
+  - jsonschema=3.2.0
+  - jupyter=1.0.0
+  - jupyter_client=6.1.3
+  - jupyter_console=6.1.0
+  - jupyter_core=4.6.3
+  - kiwisolver=1.2.0
+  - ld_impl_linux-64=2.33.1
+  - libedit=3.1.20181209
+  - libffi=3.3
+  - libgcc-ng=9.1.0
+  - libgfortran-ng=7.3.0
+  - libpng=1.6.37
+  - libprotobuf=3.12.3
+  - libsodium=1.0.16
+  - libstdcxx-ng=9.1.0
+  - libtiff=4.1.0
+  - libuuid=1.0.3
+  - libxcb=1.13
+  - libxml2=2.9.9
+  - lz4-c=1.9.2
+  - markdown=3.1.1
+  - markupsafe=1.1.1
+  - matplotlib=3.1.3
+  - matplotlib-base=3.1.3
+  - mistune=0.8.4
+  - mkl=2020.1
+  - mkl-service=2.3.0
+  - mkl_fft=1.0.15
+  - mkl_random=1.1.1
+  - nbconvert=5.6.1
+  - nbformat=5.0.6
+  - ncurses=6.2
+  - ninja=1.7.2
+  - nltk=3.5
+  - notebook=6.0.3
+  - numpy=1.18.1
+  - numpy-base=1.18.1
+  - oauthlib=3.1.0
+  - olefile=0.46
+  - openssl=1.1.1g
+  - pandoc=2.2.3.2
+  - pandocfilters=1.4.2
+  - parso=0.7.0
+  - pcre=8.43
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=7.1.2
+  - pip=20.0.2
+  - prometheus_client=0.7.1
+  - prompt-toolkit=3.0.5
+  - prompt_toolkit=3.0.5
+  - protobuf=3.12.3
+  - ptyprocess=0.6.0
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.7
+  - pycodestyle=2.6.0
+  - pycparser=2.20
+  - pygments=2.6.1
+  - pyjwt=1.7.1
+  - pyopenssl=19.1.0
+  - pyparsing=2.4.7
+  - pyqt=5.9.2
+  - pyrsistent=0.16.0
+  - pysocks=1.7.1
+  - python=3.7.7
+  - python-dateutil=2.8.1
+  - pytorch=1.5.1
+  - pyzmq=18.1.1
+  - qt=5.9.7
+  - qtconsole=4.7.4
+  - qtpy=1.9.0
+  - readline=8.0
+  - regex=2020.5.14
+  - requests=2.23.0
+  - requests-oauthlib=1.3.0
+  - rsa=4.0
+  - send2trash=1.5.0
+  - setuptools=47.1.1
+  - sip=4.19.8
+  - six=1.15.0
+  - sqlite=3.31.1
+  - tensorboard=2.2.1
+  - tensorboard-plugin-wit=1.6.0
+  - terminado=0.8.3
+  - testpath=0.4.4
+  - tk=8.6.8
+  - toml=0.10.1
+  - torchvision=0.6.1
+  - tornado=6.0.4
+  - tqdm=4.46.1
+  - traitlets=4.3.3
+  - urllib3=1.25.8
+  - wcwidth=0.1.9
+  - webencodings=0.5.1
+  - werkzeug=1.0.1
+  - wheel=0.34.2
+  - widgetsnbextension=3.5.1
+  - xz=5.2.5
+  - zeromq=4.3.1
+  - zipp=3.1.0
+  - zlib=1.2.11
+  - zstd=1.4.4
   - pip:
     - blis==0.4.1
     - catalogue==1.0.0
     - cymem==2.0.3
-    - de-core-news-sm==2.3.0
-    - en-core-web-sm==2.3.1
     - jieba==0.42.1
     - murmurhash==1.0.2
     - plac==1.1.3
