--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ trainer/test_dataloader.py
 data_processing/test.py
 lang_vec/test_lang_vec.py
 data_processing/corpus_data.py
+trainer/multilingual_transformer.py
+trainer/multilingual_transformer.sh
