--- a/requirement.yml
+++ b/requirement.yml
@@ -178,9 +178,11 @@ dependencies:
     - jieba==0.42.1
     - murmurhash==1.0.2
     - plac==1.1.3
+    - portalocker==2.0.0
     - preshed==3.0.2
     - pysnooper==0.4.1
     - python-graphviz==0.14
+    - sacrebleu==1.3.7
     - scipy==1.5.2
     - sentencepiece==0.1.91
     - spacy==2.3.2
@@ -190,6 +192,7 @@ dependencies:
     - torchsnooper==0.8
     - torchtext==0.6.0
     - torchviz==0.0.1
+    - typing==3.7.4.3
     - wasabi==0.7.1
 prefix: /home/rrjin/anaconda3/envs/ml
 
